[package]
name = "view-types"
description = "A macro to create a view type data structure"
license = "MIT"
version = "0.2.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
bon = "3.6"
